# gtfs-eta

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: push-feed.yml  refresh-gtfs.yml  retrain.yml  route-mae.yml  score-quality.yml
docs/: collector_rules.md
scripts/: diagnose.py  export_worker_data.py  push_feed.py  review_quality.py  route_mae.py  run_pipeline.py  sanity_check.py  score_quality.py  set_r2_lifecycle.py  step1_load_gtfs.py  step2_verify_snapshots.py  validate_horizon_bias.py  validate_off_route.py
src/: baseline.py  features.py  gate.py  gtfs_static.py  inference.py  labeling.py  predict.py  scoring.py  snapshots.py  train.py  trip_inference.py  utm.py
tests/: conftest.py  test_eta_model.py  test_gate.py  test_push_feed_stale_fallback.py  test_scoring.py  test_smoke.py  test_trip_inference.py
worker/: .wranglerignore  pyproject.toml  worker.js  worker.py  wrangler.toml
