[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs-eta"
version = "0.1.7"
requires-python = ">=3.11"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "shapely>=2.0",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "joblib>=1.3",
    "tqdm>=4.66",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
# AI quality-diagnosis layer (the on-demand `scripts/diagnose.py` tool). Kept out
# of the base deps so neither the per-15s push-feed job nor the daily metrics-only
# score-quality job pulls the Anthropic SDK they never use.
ai = [
    "anthropic>=0.69",
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
